Switch projects listing to POST body filters
